chore: centralize utilities, improve auth error handling, and refactor redundant code
- Extract `formatAmount`, `formatDate`, and `STATUS_VARIANTS` to a shared utility module for reuse across components.
- Introduce a custom `useAuthErrorHandler` hook to standardize and simplify auth error handling.
- Refactor `AdminDashboard`, `AdminActivities`, `AdminBookingDetail`, and `AdminBlog` to remove inline formatting and redundant logic.
- Simplify backend role-mapping with `toList()` and standardize OAuth2 error handling in `AudienceValidator`.
- Update API service functions to use `authHeaders` for cleaner token management.